Fix dropdown wrapping

--- a/style.css
+++ b/style.css
@@ -998,30 +998,6 @@ body {
     position: relative;
 }
 
-/* ---------------------------------- */
-/* Commented out */
-/* ---------------------------------- */
-
-/* .menu-item {
-	float: left;
-	text-align: center;
-	width:14.30%;
-	height: 100%;
-}
-
-.menu-item a {
-	display: inline-block;
-	color: white;
-	padding: 14px 16px;
-	width: 100%;
-	height: 100%;
-	text-decoration: none;
-} */
-
-
-/* ---------------------------------- */
-
-
 .menu-item a:hover {
     background-color: #85b4d4;
 }
@@ -1034,8 +1010,6 @@ body {
     display: block;
     position: absolute;
     background-color: #f9f9f9;
-    /* 	min-width: 160px; */
-    /* 	width: 14.30%; */
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
@@ -1047,18 +1021,17 @@ body {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     display: block;
     text-align: left;
-    width:100%;
 }
 
 .sub-menu a:hover {
     background-color: #85b4d4;
     font-family: "Trebuchet MS", Helvetica, sans-serif;
-    width:100%;
     color: white;
 }
 
 .menu-item-has-children:hover .sub-menu a {
     display: block;
+    width:100%;
 }
 
 article {
